<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <!-- Top Toolbar -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/surface"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnStartStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_capture"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnViewCharts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_charts"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_data"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/text_overlay"
            android:gravity="end"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <!-- FFT Visualizer Grid (3 columns x 1 row for C++, Java, Python) -->
    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="3"
        android:rowCount="1"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- C++ FFT Visualizer -->
        <include
            layout="@layout/fft_visualizer_cell"
            android:id="@+id/cppVisualizerCell"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_margin="4dp" />

        <!-- Java FFT Visualizer -->
        <include
            layout="@layout/fft_visualizer_cell"
            android:id="@+id/javaVisualizerCell"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_margin="4dp" />

        <!-- Python FFT Visualizer -->
        <include
            layout="@layout/fft_visualizer_cell"
            android:id="@+id/pythonVisualizerCell"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_margin="4dp" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
